# 4d_icp

./: .gitignore  CMakeLists.txt
data/: intensity_bunny.pcd
include/: registration.h
src/: main.cpp  registration.cpp
